papers with their respectives links

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <!-- <li data-filter=".filter-app">App</li> -->
+            <li data-filter=".filter-app">App</li>
             <!-- <li data-filter=".filter-product">Product</li> -->
             <!-- <li data-filter=".filter-branding">Branding</li> -->
             <li data-filter=".filter-books">Papers</li>
@@ -444,13 +444,12 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/paper1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Papers 1</h4>
-                  <p>Autonomous Navigation and Indoor
-                    Mapping for a Service Robot</p>
-                  <a href="assets/img/portfolio/books-1.jpg" title="Paper 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <p>Autonomous Navigation and Indoor Mapping for a Service Robot</p>
+                  <a href="assets/img/portfolio/paper1.png" title="Paper 1" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://www.researchgate.net/publication/374509653_Autonomous_navigation_and_indoor_mapping_for_a_service_robot" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -495,12 +494,12 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/paper2.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Papers 2</h4>
                   <p>Map-Bot: Mapping Model of Indoor Work Environments in Mobile Robotics</p>
-                  <a href="assets/img/portfolio/books-2.jpg" title="Paper 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="assets/img/portfolio/paper2.png" title="Paper 2" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://www.researchgate.net/publication/352185957_Map-Bot_Mapping_Model_of_Indoor_Work_Environments_in_Mobile_Robotics" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -545,12 +544,12 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/paper3.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Papers 3</h4>
-                  <p>Caracterización y control del sistema STEER BY-WIRE en un vehículo eléctrico</p>
-                  <a href="assets/img/portfolio/books-3.jpg" title="Papers 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <p>Enhancing mobile robot navigation: Integrating reactive autonomy through Deep learning and Fuzzy behavior</p>
+                  <a href="assets/img/portfolio/paper3.png" title="Papers 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://www.researchgate.net/publication/382141409_Enhancing_mobile_robot_navigation_Integrating_reactive_autonomy_through_Deep_learning_and_Fuzzy_behavior" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
